--- a/sanity/hormone-group-ie/tsconfig.json
+++ b/sanity/hormone-group-ie/tsconfig.json
@@ -12,6 +12,6 @@
     "jsx": "preserve",
     "incremental": true
   },
-  "include": ["**/*.ts", "**/*.tsx"],
+  "include": ["**/*.ts", "**/*.tsx", "../_archive/schemas/category.ts"],
   "exclude": ["node_modules"]
 }
