--- a/package.json
+++ b/package.json
@@ -9,6 +9,16 @@
     "agent:ask": "node -r dotenv/config scripts/agent-ask.mjs",
     "agent:provision": "node -r dotenv/config scripts/agent-ask.mjs provision",
     "agent:checkout": "node -r dotenv/config scripts/agent-ask.mjs checkout",
+    "agent:stripe": "node -r dotenv/config scripts/agent-ask.mjs setup-stripe",
+    "agent:sanity": "node -r dotenv/config scripts/agent-ask.mjs setup-sanity",
+    "agent:database": "node -r dotenv/config scripts/agent-ask.mjs setup-database",
+    "stripe:agent": "node -r dotenv/config scripts/stripe-agent.mjs",
+    "stripe:setup": "node -r dotenv/config scripts/stripe-agent.mjs full-setup",
+    "sanity:agent": "node -r dotenv/config scripts/sanity-agent.mjs",
+    "sanity:setup": "node -r dotenv/config scripts/sanity-agent.mjs full-setup",
+    "database:agent": "node -r dotenv/config scripts/database-agent.mjs",
+    "database:setup": "node -r dotenv/config scripts/database-agent.mjs full-setup",
+    "db:agent": "node -r dotenv/config scripts/database-agent.mjs",
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
@@ -17,10 +27,36 @@
     "studio": "npm --prefix sanity/hormone-group-ie run dev",
     "stripe:listen": "stripe listen --forward-to localhost:3000/api/stripe/webhook --print-secret",
     "sync:stripe": "node scripts/stripe-sync-from-sanity.js",
-    "provision": "node -r dotenv/config scripts/provision-one.mjs"
+    "provision": "node -r dotenv/config scripts/provision-one.mjs",
+    "workflow": "node -r dotenv/config scripts/workflow-orchestrator.mjs",
+    "workflow:test": "node -r dotenv/config scripts/workflow-orchestrator.mjs test-workflow",
+    "workflow:webhooks": "node -r dotenv/config scripts/workflow-orchestrator.mjs setup-webhooks",
+    "workflow:monitor": "node -r dotenv/config scripts/workflow-orchestrator.mjs monitor",
+    "workflow:health": "node -r dotenv/config scripts/workflow-orchestrator.mjs health",
+    "webhook:verify": "node -r dotenv/config scripts/setup-production-webhooks.mjs verify",
+    "webhook:list": "node -r dotenv/config scripts/setup-production-webhooks.mjs list-webhooks",
+    "webhook:create-stripe": "node -r dotenv/config scripts/setup-production-webhooks.mjs create-stripe-webhook",
+    "webhook:sanity": "node -r dotenv/config scripts/setup-production-webhooks.mjs sanity-instructions",
+    "webhook:full-setup": "node -r dotenv/config scripts/setup-production-webhooks.mjs full-setup",
+    "stripe:ai": "node -r dotenv/config scripts/stripe-ai-agent.mjs",
+    "sanity:ai": "node -r dotenv/config scripts/sanity-ai-agent.mjs",
+    "database:ai": "node -r dotenv/config scripts/database-ai-agent.mjs",
+    "marketing:ai": "node -r dotenv/config scripts/marketing-ai-agent.mjs",
+    "analytics:ai": "node -r dotenv/config scripts/analytics-ai-agent.mjs",
+    "operations:ai": "node -r dotenv/config scripts/operations-ai-agent.mjs",
+    "github:ai": "node -r dotenv/config scripts/github-ai-agent.mjs",
+    "supabase:ai": "node -r dotenv/config scripts/supabase-ai-agent.mjs",
+    "ai:master": "node -r dotenv/config scripts/master-ai-orchestrator.mjs",
+    "ai:test": "node -r dotenv/config scripts/master-ai-orchestrator.mjs run workflow test",
+    "ai:analyze": "node -r dotenv/config scripts/master-ai-orchestrator.mjs system analysis",
+    "ai:health": "node -r dotenv/config scripts/master-ai-orchestrator.mjs system health check",
+    "ai:route": "node -r dotenv/config scripts/master-ai-orchestrator.mjs intelligent routing",
+    "ai:complete": "node -r dotenv/config scripts/master-ai-orchestrator.mjs comprehensive business analysis"
   },
   "dependencies": {
+    "@anthropic-ai/sdk": "^0.59.0",
     "@hookform/resolvers": "^5.2.1",
+    "@octokit/rest": "^22.0.0",
     "@prisma/client": "^6.13.0",
     "@radix-ui/react-accordion": "^1.2.11",
     "@radix-ui/react-dialog": "^1.1.14",
@@ -30,6 +66,7 @@
     "@sanity/client": "^7.8.2",
     "@sanity/image-url": "^1.1.0",
     "@sanity/vision": "3.99.0",
+    "@supabase/supabase-js": "^2.54.0",
     "@vercel/analytics": "^1.5.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -42,6 +79,7 @@
     "next-sanity": "^9.12.3",
     "next-seo": "^6.8.0",
     "next-sitemap": "^4.2.3",
+    "openai": "^5.12.2",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-hook-form": "^7.62.0",
@@ -61,13 +99,13 @@
     "@types/react-dom": "18.3.0",
     "@types/stripe": "^8.0.416",
     "autoprefixer": "10.4.19",
+    "dotenv": "^16.4.5",
     "eslint": "8.57.0",
     "eslint-config-next": "14.2.5",
     "postcss": "8.4.39",
     "prisma": "^6.13.0",
     "shadcn-ui": "^0.9.5",
     "tailwindcss": "3.4.10",
-  "typescript": "5.5.4",
-  "dotenv": "^16.4.5"
+    "typescript": "5.5.4"
   }
 }
